  - try to make the user interface more intuitive

- add support for more than one DMD (for original tables, in-game DMD menu,...)

- add new log file functionality (vpinball.log), with script and error informations
  logging can be en/disabled in the UI/Editor preferences

- the settings are now stored in a file named 'VPinballX.ini'. This file will be automatically initialized from existing settings if found in Windows registry. This change was made to:
  - allow easier edition (manually or by a third party application),
  - allow to have settings per installation: if 2 versions of VPX are installed in 2 different folders, each of them will use their local setting file,
  - settings are the same and can be shared between Windows version of VPX and the standalone version (Linux, Mac, Android, iOS, Raspberry,...),
  - allow to see all the available settings at once (not so easy before, since there are a few hundreds of them),
  - allow easier collaboration by being able to share the setting file with bug reports.

FIXES:

- fix analogue nudge not working for joysticks/gamepads in XInput mode

- fix some problems with playing sounds via BASS: pitch/frequency change and loop/restart should now be matching the 'old' player

- reflections now work in the interactive camera/light editing mode (F6) as well

- fix overbrightness in F6 (interactive camera/light editing) mode

- handle broken tables better and try to load as much as possible

- static element preprocessing is now done on the GPU (which leads to a faster VPX-player start)
- increase preprocessing sample rate for the static parts of the table

- cleanup Light Debugger dialog and fix 2nd color button

- improve script editing performance again

- fix crash if sound card(s) hardware/driver setup changed

- update example tables with new raytraced ball shadows enabled

- update FreeImage library to latest 3.18.0 (custom build) (currently disabled)
- DirectX 8 port for input handling (currently disabled)
